// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<forwardRef<Button>
  priority="primary"
>
  <Button
    align="center"
    disabled={false}
    forwardRef={null}
    priority="primary"
  >
    <StyledButton
      aria-disabled={false}
      aria-label="Button"
      disabled={false}
      forwardRef={null}
      onClick={[Function]}
      priority="primary"
      role="button"
    >
      <Component
        aria-disabled={false}
        aria-label="Button"
        className="css-1e05jtd-StyledButton edwq9my0"
        forwardRef={null}
        onClick={[Function]}
        role="button"
      >
        <button
          aria-disabled={false}
          aria-label="Button"
          className="css-1e05jtd-StyledButton edwq9my0"
          onClick={[Function]}
          role="button"
        >
          <ButtonLabel
            align="center"
            priority="primary"
          >
            <span
              className="css-zmpclt-ButtonLabel edwq9my1"
            >
              Button
            </span>
          </ButtonLabel>
        </button>
      </Component>
    </StyledButton>
  </Button>
</forwardRef<Button>>
`;

exports[`Button renders disabled normal link 1`] = `
<forwardRef<Button>
  href="/some/relative/url"
>
  <Button
    align="center"
    disabled={false}
    forwardRef={null}
    href="/some/relative/url"
  >
    <StyledButton
      aria-disabled={false}
      aria-label="Normal Link"
      disabled={false}
      forwardRef={null}
      href="/some/relative/url"
      onClick={[Function]}
      role="button"
    >
      <Component
        aria-disabled={false}
        aria-label="Normal Link"
        className="css-1ili4om-StyledButton edwq9my0"
        forwardRef={null}
        href="/some/relative/url"
        onClick={[Function]}
        role="button"
      >
        <a
          aria-disabled={false}
          aria-label="Normal Link"
          className="css-1ili4om-StyledButton edwq9my0"
          href="/some/relative/url"
          onClick={[Function]}
          role="button"
        >
          <ButtonLabel
            align="center"
          >
            <span
              className="css-zmpclt-ButtonLabel edwq9my1"
            >
              Normal Link
            </span>
          </ButtonLabel>
        </a>
      </Component>
    </StyledButton>
  </Button>
</forwardRef<Button>>
`;

exports[`Button renders normal link 1`] = `
<forwardRef<Button>
  href="/some/relative/url"
>
  <Button
    align="center"
    disabled={false}
    forwardRef={null}
    href="/some/relative/url"
  >
    <StyledButton
      aria-disabled={false}
      aria-label="Normal Link"
      disabled={false}
      forwardRef={null}
      href="/some/relative/url"
      onClick={[Function]}
      role="button"
    >
      <Component
        aria-disabled={false}
        aria-label="Normal Link"
        className="css-1ili4om-StyledButton edwq9my0"
        forwardRef={null}
        href="/some/relative/url"
        onClick={[Function]}
        role="button"
      >
        <a
          aria-disabled={false}
          aria-label="Normal Link"
          className="css-1ili4om-StyledButton edwq9my0"
          href="/some/relative/url"
          onClick={[Function]}
          role="button"
        >
          <ButtonLabel
            align="center"
          >
            <span
              className="css-zmpclt-ButtonLabel edwq9my1"
            >
              Normal Link
            </span>
          </ButtonLabel>
        </a>
      </Component>
    </StyledButton>
  </Button>
</forwardRef<Button>>
`;

exports[`Button renders react-router link 1`] = `
<forwardRef<Button>
  to="/some/route"
>
  <Button
    align="center"
    disabled={false}
    forwardRef={null}
    to="/some/route"
  >
    <StyledButton
      aria-disabled={false}
      aria-label="Router Link"
      disabled={false}
      forwardRef={null}
      onClick={[Function]}
      role="button"
      to="/some/route"
    >
      <Component
        aria-disabled={false}
        aria-label="Router Link"
        className="css-1ili4om-StyledButton edwq9my0"
        forwardRef={null}
        onClick={[Function]}
        role="button"
        to="/some/route"
      >
        <Link
          aria-disabled={false}
          aria-label="Router Link"
          className="css-1ili4om-StyledButton edwq9my0"
          onClick={[Function]}
          onlyActiveOnIndex={false}
          role="button"
          style={Object {}}
          to="/some/route"
        >
          <a
            aria-disabled={false}
            aria-label="Router Link"
            className="css-1ili4om-StyledButton edwq9my0"
            onClick={[Function]}
            role="button"
            style={Object {}}
          >
            <ButtonLabel
              align="center"
            >
              <span
                className="css-zmpclt-ButtonLabel edwq9my1"
              >
                Router Link
              </span>
            </ButtonLabel>
          </a>
        </Link>
      </Component>
    </StyledButton>
  </Button>
</forwardRef<Button>>
`;
